--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.1",
     "nodemon": "^3.1.10",
     "qrcode": "^1.5.4",
+    "sharp": "^0.34.3",
     "xml2js": "^0.6.2"
   }
 }
